--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -5,6 +5,13 @@
     }
     Layout = "~/Shared/_LayoutYeni.cshtml";  
  
+   var gorunum=Request.QueryString["Gorunum"];
+
+   if (string.IsNullOrEmpty(gorunum))
+      {
+          gorunum="-1";
+      }
+
    if (!Roles.IsUserInRole("Ogretici"))
     {
         Response.Redirect("~/Shared/Hata?Kod=kullaniciegitmendegil");
@@ -19,7 +26,7 @@
            Culture=UICulture="tr-TR";
        }
 
-    var queryDosyalar=db.Query("SELECT * FROM Dosya WHERE userID=@0 AND Silindi=0 AND Dosya.YuklenmeTuru<>2 ORDER BY EklenmeTarihi DESC",WebSecurity.CurrentUserId);
+    var queryDosyalar=db.Query("SELECT * FROM Dosya WHERE userID=@0 AND Silindi=0 AND Dosya.YuklenmeTuru<>2 AND Konum=@1 ORDER BY EklenmeTarihi DESC",WebSecurity.CurrentUserId,gorunum);
     db.Close();
   
 }
@@ -36,19 +43,23 @@
 <div class="row">
     
    <div class="col-lg-12">
-           
+          
        @if (Roles.IsUserInRole("Ogretici"))
        {
         <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalDosyaEkle">
-            <i class="fa fa-plus-circle"></i> @Resources.Resource.lblYeniBirDokumanEkle
+            <i class="fa fa-cloud-upload"></i> @Resources.Resource.lblYeniBirDokumanEkle
+        </button>
+
+       <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalKlasorEkle">
+            <i class="fa fa-plus-circle"></i> Yeni Klasör
         </button>
        }
            <br><br>    
         <table id="lstDosyalar" class="table table-hover">
         <thead>
             <tr>
-               
-                <th>@Resources.Resource.lblDosyaAdi</th>
+               <th></th>
+                <th>@Resources.Resource.lblAd</th>
                 <th> @Resources.Resource.lblBoyut</th>
                 <th> @Resources.Resource.lblEklenmeTarihi</th>
                 <th></th>
@@ -56,11 +67,61 @@
             </tr>
         </thead>
          <tbody>
+ 
+             <tr>
+                 <td></td>
+                <td>
+                    <a href="#" class="text-success">
+                    <span class="fa-stack">
+                        <i class="fa fa-folder-o fa-stack-2x"></i>
+                        <i class="fa fa-recycle fa-stack-1x"></i>
+                    </span> Geri Dönüşüm Kutusu
+                   </a>
+                </td>
+                 <td></td>
+                 <td></td>
+                 <td></td>
+             </tr>
+
+             <tr>
+                 <td></td>
+                <td>
+                    <a href="#" class="text-success">
+                    <span class="fa-stack">
+                        <i class="fa fa-folder-o fa-stack-2x"></i>
+                        <i class="fa fa-share fa-stack-1x"></i>
+                    </span> Benimle Paylaşılmış Dosyalar
+                   </a>
+                </td>
+                 <td></td>
+                 <td></td>
+                 <td></td>
+             </tr>
+
+             <tr>
+                 <td></td>
+                <td>
+                    <a href="#" class="text-success">
+                    <span class="fa-stack">
+                        <i class="fa fa-folder-o fa-stack-2x"></i>
+                        <i class="fa fa-clock-o fa-stack-1x"></i>
+                    </span> Ödevlerle Gönderilmiş Dosyalar
+                   </a>
+                </td>
+                 <td></td>
+                 <td></td>
+                 <td></td>
+             </tr>
+
             @foreach (var dosya in queryDosyalar)
             {
                 
                 <tr>
-                    
+                    <td>
+                       <label>
+                       <input type="checkbox" class="colored-primary">
+                       <span class="text"></span>
+                      </label>                    </td>
                     <td><a href="@Href("~/Dosya/Indir?DosyaID=")@dosya.DosyaID">@HelperDosya.DosyaIkonu(dosya.DosyaAdi) @dosya.DosyaAdi</a></td>
                     <td>
 
