--- a/Ajax/Dosya/JsonAltKlasorler.cshtml
+++ b/Ajax/Dosya/JsonAltKlasorler.cshtml
@@ -9,16 +9,28 @@
    
    var konum=Request["Konum"];
 
-
+   long ustKonum=-2;
      if (string.IsNullOrEmpty(konum))
      {
        
        konum="-1";
      }  
+
     var db=Database.Open("fb1ae");
    
+    var queryKlasor=db.QuerySingle("SELECT * FROM Klasor WHERE KlasorID=@0",konum);
+    if (queryKlasor!=null)
+    {
+        
+        ustKonum=Convert.ToInt64(queryKlasor.Konum);
+    }
     var queryKlasorler=db.Query("SELECT * FROM Klasor WHERE Konum=@0 AND UserID=@1 AND Silindi=0",konum,WebSecurity.CurrentUserId);
-    Json.Write(queryKlasorler, Response.Output);
+    
+    GezintiKlasor k=new GezintiKlasor();
+    k.UstKlasor=ustKonum;
+    k.AltKlasorler=queryKlasorler;
+   
+    Json.Write(k, Response.Output);
     db.Close();   
     Response.ContentType = "application/json";
     Response.End();
