--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -277,7 +277,7 @@
         </table>
       </div>
       <div class="modal-footer">
-          <button type="button" class="btn btn-primary" id="btnKlasorSec">@Resources.Resource.lblTamam</button>
+          <button type="button" class="btn btn-primary" id="btnKlasoreTasi">@Resources.Resource.lblTamam</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">@Resources.Resource.lblIptal</button>
         
       </div>
