--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -60,7 +60,7 @@
             <i class="fa fa-times"></i> Sil
         </button>
 
-        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalKlasorSec" disabled="true" id="btnKlasoreTasi">
+        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalKlasorSec" disabled="true" id="btnKlasoreTasiModalAc">
             <i class="fa fa-arrow-circle-up"></i> Taşı
         </button>
 
