--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -29,6 +29,19 @@
     var queryDosyalar=db.Query("SELECT * FROM Dosya WHERE userID=@0 AND Silindi=0 AND Dosya.YuklenmeTuru<>2 AND Konum=@1 ORDER BY EklenmeTarihi DESC",WebSecurity.CurrentUserId,konum);
     var queryKlasorler=db.Query("SELECT * FROM Klasor WHERE Silindi=0 AND Konum=@0",konum);
     var queryUstKlasor=db.QuerySingle("SELECT * FROM Klasor WHERE KlasorID=@0",konum);
+    var KonumID=konum;
+                            
+    List<LinkGezintiKlasor> ustKlasorler=new List<LinkGezintiKlasor>();
+            while (KonumID!="-1")
+                 {
+                    var queryKlasorDetay =db.QuerySingle("SELECT * FROM Klasor WHERE KlasorID=@0",KonumID);
+                    LinkGezintiKlasor lgs=new LinkGezintiKlasor();
+                    lgs.KlasorID=Convert.ToString(queryKlasorDetay.KlasorID);
+                    lgs.KlasorAdi=queryKlasorDetay.KlasorAdi;
+                    ustKlasorler.Add(lgs);
+                    KonumID=Convert.ToString(queryKlasorDetay.Konum); 
+                  }
+                               
     db.Close();
   
 }
@@ -42,6 +55,9 @@
 {
    <h1>@Resources.Resource.lblDosyalar</h1>
 }
+
+   
+
 <div class="row">
     <span id="spnKonum" data-Konum="@konum"></span>
    <div class="col-lg-12">
@@ -64,8 +80,26 @@
             <i class="fa fa-arrow-circle-up"></i> Taşı
         </button>
 
+        <br>
+        <br>
+
+        <div class="page-breadcrumbs">
+                    <ul class="breadcrumb">
+                            <li><a href="@Href("~/Dosya/Liste")"><i class="fa fa-cloud"></i> Dosyalar </a></li>
+                        @{
+                          
+
+                                for (int i=ustKlasorler.Count-1;i>=0;i--)
+                                {
+                                    <li><a href="@Href("~/Dosya/Liste?Konum=" + @ustKlasorler[i].KlasorID)">@ustKlasorler[i].KlasorAdi</a></li>  
+                                }
+                        }
+                          
+                    </ul>
+         </div>  
+
        }
-           <br><br>    
+           <br><br> <br>
         <table id="lstDosyalar" class="table table-hover">
         <thead>
             <tr>
