--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -27,14 +27,14 @@
        }
 
     var queryDosyalar=db.Query("SELECT * FROM Dosya WHERE userID=@0 AND Silindi=0 AND Konum=@1 ORDER BY EklenmeTarihi DESC",WebSecurity.CurrentUserId,konum);
-    var queryKlasorler=db.Query("SELECT * FROM Klasor WHERE Silindi=0 AND Konum=@0",konum);
-    var queryUstKlasor=db.QuerySingle("SELECT * FROM Klasor WHERE KlasorID=@0",konum);
+    var queryKlasorler=db.Query("SELECT * FROM Klasor WHERE Silindi=0 AND Konum=@0 AND UserID=@1",konum,WebSecurity.CurrentUserId);
+    var queryUstKlasor=db.QuerySingle("SELECT * FROM Klasor WHERE KlasorID=@0 AND UserID=@1 AND Silindi=0",konum,WebSecurity.CurrentUserId);
     var KonumID=konum;
                             
     List<LinkGezintiKlasor> ustKlasorler=new List<LinkGezintiKlasor>();
             while (KonumID!="-1")
                  {
-                    var queryKlasorDetay =db.QuerySingle("SELECT * FROM Klasor WHERE KlasorID=@0",KonumID);
+                    var queryKlasorDetay =db.QuerySingle("SELECT * FROM Klasor WHERE KlasorID=@0 AND Silindi=0 AND UserID=@1",KonumID,WebSecurity.CurrentUserId);
                     LinkGezintiKlasor lgs=new LinkGezintiKlasor();
                     lgs.KlasorID=Convert.ToString(queryKlasorDetay.KlasorID);
                     lgs.KlasorAdi=queryKlasorDetay.KlasorAdi;
