--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -115,7 +115,7 @@
             </tr>
         </thead>
          <tbody>
- 
+            <tr class="KlasorSatiri hide"></tr>
             @if (queryUstKlasor!=null)
             {
                 <tr class="KlasorSatiri">
