--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -72,7 +72,7 @@
             <i class="fa fa-plus-circle"></i> Yeni Klasör
         </button>
 
-        <button type="button" class="btn btn-primary btn-lg" id="btnCokluSil" disabled="true">
+        <button type="button" class="btn btn-primary btn-lg" id="btnCokluSil" disabled>
             <i class="fa fa-times"></i> Sil
         </button>
 
