--- a/Shared/_LayoutYeni.cshtml
+++ b/Shared/_LayoutYeni.cshtml
@@ -308,7 +308,7 @@
                 @if (roller.Contains("Ogretici"))
                    {                     <li>
                         <a href="@Href("~/Dosya/Liste")">
-                            <i class="menu-icon fa fa-files-o fa-fw"></i>
+                            <i class="menu-icon fa fa-cloud fa-fw"></i>
                             <span class="menu-text"> @Resources.Resource.lblDosyalar </span>
                         </a>
                     </li>  
